# SimpleGameEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  compile_flags.txt  debug.bat  makefile  makefile.mak  readme.md  run.bat
binary/linux/: ResourceGenerator.out  ResourceLoader.out  run.sh
cmake/: CompileCommands.cmake  Config.cmake  External.cmake  Format.cmake  Meta.cmake  Target.cmake
make/: build.mk  files.mk  flags.mk  main.mk  platform.mk  utility.mk
prog/: Camera.cpp  Error.cpp  Game.cpp  GameObject.cpp  Input.cpp  Item.cpp  PlatformUtil.cpp  Player.cpp  Render.cpp  Shader.cpp  SystemUtil.cpp  Texture.cpp  TimeUtil.cpp  Util.cpp  Window.cpp  main.cpp
prog/include/: Camera.hpp  Error.hpp  Game.hpp  GameObject.hpp  Input.hpp  Item.hpp  PlatformUtil.hpp  Player.hpp  Render.hpp  Render.tpl.hpp  Shader.hpp  SystemUtil.hpp  SystemUtil.tpl.hpp  Texture.hpp  TimeUtil.hpp  Util.hpp  Window.hpp  camera.hpp  game.hpp  input.hpp  item.hpp  platform.hpp  player.hpp  render.hpp  render.tpl.hpp  shader.hpp  shader.tpl.hpp  system_util.hpp  system_util.tpl.hpp  texture.hpp  texture.tpl.hpp  time.hpp  time_util.hpp  window.hpp
prog/shaders/: floor.glsl  fragmentShader.glsl  fragmentShader2.glsl  player1.glsl  vertexShader.glsl  vertexShader2.glsl
prog/source/: Camera.cpp  Input.cpp  Player.cpp  Render.cpp  Shader.cpp  SystemUtil.cpp  Texture.cpp  TimeUtil.cpp  Window.cpp  camera.cpp  game.cpp  input.cpp  item.cpp  main.cpp  platform.cpp  player.cpp  render.cpp  scene.cpp  shader.cpp  system_util.cpp  texture.cpp  time.cpp  time_util.cpp  window.cpp
program/include/: camera.hpp  data.hpp  data.inl  input.hpp  item.hpp  main.hpp  object.hpp  platform.hpp  player.hpp  property.hpp  rename.hpp  render.hpp  render.inl  render.tpl.hpp  resource.hpp  scene.hpp  shader.hpp  shader.inl  shader.tpl.hpp  system.hpp  texture.hpp  texture.inl  texture.tpl.hpp  time.hpp  timer.hpp  utility.hpp  utility.inl  window.hpp
program/shader/: fragment_shader.glsl  vertex_shader.glsl
program/source/: camera.cpp  input.cpp  item.cpp  main.cpp  platform.cpp  player.cpp  rename.cpp  render.cpp  scene.cpp  shader.cpp  system.cpp  texture.cpp  time.cpp  timer.cpp  window.cpp
script/: build.bat  build.sh  clean.bat  clean.sh  debug.bat  debug.sh  run.bat  run.sh
src/: glad.c
src/include/glad/: glad.h
system/: debug.bat  run.bat
